kubernetes-resources/frontend/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: front-deploy
  namespace: front-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      name: front-pod
      labels:
        app: front
    spec:
      containers:
        - name: nginx-container
          image: nginx

          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-conf
              subPath: nginx.conf
          ports:
            - containerPort: 8080
              protocol: TCP
                #readinessProbe:
                #httpGet:
                #path: /
                #port: 8080
                #initialDelaySeconds: 5
                #periodSeconds: 10
                #timeoutSeconds: 2
                #successThreshold: 1
                #failureThreshold: 3
                #livenessProbe:
                #httpGet:
                #path: /
                #port: 8080
                #initialDelaySeconds: 5
                #periodSeconds: 10
                #timeoutSeconds: 2
                #successThreshold: 1
                #failureThreshold: 3
        - name: react-container
          image: bstar999/front-image-mini
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          ports:
            - containerPort: 80
            
      volumes:
        - name: nginx-conf
          hostPath:
            path: /app-config
            type: Directory
      affinity:
        podAntiAffinity: 
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - front
                topologyKey: "topology.kubernetes.io/zone"
